<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="add_note">Add Note</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="app_name">Keep Notes</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
  <string name="biometric_prompt_message">Use your biometric to continue</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
  <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
  <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
  <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
  <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="clear_text_end_icon_content_description">Clear text</string>
  <string name="common_google_play_services_enable_button">Enable</string>
  <string name="common_google_play_services_enable_text">%1$s won't work unless you enable Google Play services.</string>
  <string name="common_google_play_services_enable_title">Enable Google Play services</string>
  <string name="common_google_play_services_install_button">Install</string>
  <string name="common_google_play_services_install_text">%1$s won't run without Google Play services, which are missing from your device.</string>
  <string name="common_google_play_services_install_title">Get Google Play services</string>
  <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
  <string name="common_google_play_services_notification_ticker">Google Play services error</string>
  <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
  <string name="common_google_play_services_unsupported_text">%1$s won't run without Google Play services, which are not supported by your device.</string>
  <string name="common_google_play_services_update_button">Update</string>
  <string name="common_google_play_services_update_text">%1$s won't run unless you update Google Play services.</string>
  <string name="common_google_play_services_update_title">Update Google Play services</string>
  <string name="common_google_play_services_updating_text">%1$s won't run without Google Play services, which are currently updating.</string>
  <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
  <string name="common_open_on_phone">Open on phone</string>
  <string name="common_signin_button_text">Sign in</string>
  <string name="common_signin_button_text_long">Sign in with Google</string>
  <string name="confirm_device_credential_password">Use password</string>
  <string name="content_item">Content</string>
  <string name="content_view">Content</string>
  <string name="copy_toast_msg">Link copied to clipboard</string>
  <string name="date">date</string>
  <string name="default_error_msg">Unknown error</string>
  <string name="edit_note">Edit Note</string>
  <string name="error_a11y_label">Error: invalid</string>
  <string name="error_icon_content_description">Error</string>
  <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
  <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
  <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
  <string name="face_or_screen_lock_prompt_message">Use your face or screen lock to continue</string>
  <string name="face_prompt_message">Use your face to continue</string>
  <string name="fallback_menu_item_copy_link">Copy link</string>
  <string name="fallback_menu_item_open_in_browser">Open in browser</string>
  <string name="fallback_menu_item_share_link">Share link</string>
  <string name="fingerprint_dialog_icon_description">Fingerprint icon</string>
  <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
  <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
  <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
  <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
  <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
  <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
  <string name="fingerprint_not_recognized">Not recognized</string>
  <string name="fingerprint_or_screen_lock_prompt_message">Use your fingerprint or screen lock to continue</string>
  <string name="fingerprint_prompt_message">Use your fingerprint to continue</string>
  <string name="first_fragment_label">First Fragment</string>
  <string name="generic_error_no_device_credential">No PIN, pattern, or password set.</string>
  <string name="generic_error_no_keyguard">This device does not support PIN, pattern, or password.</string>
  <string name="generic_error_user_canceled">Authentication canceled by user.</string>
  <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
  <string name="icon_content_description">Dialog Icon</string>
  <string name="item_view_role_description">Tab</string>
  <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.

 Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.

 Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.

 Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.

 Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.</string>
  <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
  <string name="m3_ref_typeface_brand_regular">sans-serif</string>
  <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
  <string name="m3_ref_typeface_plain_regular">sans-serif</string>
  <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
  <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
  <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
  <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
  <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
  <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
  <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
  <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
  <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
  <string name="note">Note</string>
  <string name="note_add">Note</string>
  <string name="title">Title</string>
  <string name="title_add">Title</string>
</resources>