<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout android:orientation="vertical"
                android:padding="16.0dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textSize="25.0sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:id="@id/noteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.0dp"
            android:text="@string/edit_note"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/lora" />
  <ImageView android:id="@id/updateSaveButton"
             android:layout_width="25.0dp"
             android:layout_height="25.0dp"
             android:src="@drawable/done"
             android:layout_alignTop="@id/noteHeading"
             android:layout_marginEnd="2.0dp"
             android:layout_alignParentEnd="true" />
  <ImageView android:id="@id/speakButton"
             android:layout_width="25.0dp"
             android:layout_height="25.0dp"
             android:src="@drawable/speak"
             android:layout_alignTop="@id/noteHeading"
             android:layout_marginEnd="50.0dp"
             android:layout_alignParentEnd="true" />
  <ImageView android:id="@id/copyButton"
             android:layout_width="25.0dp"
             android:layout_height="25.0dp"
             android:src="@drawable/copy"
             android:layout_alignTop="@id/noteHeading"
             android:layout_marginEnd="90.0dp"
             android:layout_alignParentEnd="true" />
  <ImageView android:id="@id/shareButton"
             android:layout_width="25.0dp"
             android:layout_height="25.0dp"
             android:src="@drawable/baseline_share_24"
             android:layout_alignTop="@id/noteHeading"
             android:layout_marginEnd="130.0dp"
             android:layout_alignParentEnd="true" />
  <com.google.android.material.textfield.TextInputLayout android:id="@id/titleUp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.0dp"
                        android:layout_below="@id/noteHeading">
    <com.google.android.material.textfield.TextInputEditText android:textSize="22.0sp"
                          android:id="@id/updateTitleEditText"
                          android:padding="12.0dp"
                          android:layout_width="fill_parent"
                          android:layout_height="60.0dp"
                          android:hint="@string/title"
                          android:maxLines="1"
                          android:fontFamily="@font/lora_italic" />
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout android:id="@id/noteContent"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12.0dp"
                        android:layout_below="@id/titleUp">
    <com.google.android.material.textfield.TextInputEditText android:textSize="16.0sp"
                          android:gravity="top"
                          android:id="@id/updateContentEditText"
                          android:padding="12.0dp"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:hint="@string/note" />
  </com.google.android.material.textfield.TextInputLayout>
</RelativeLayout>